# ysyx

./: .gitattributes  .gitignore
D4/mRisc-v/: Bubble.v  PC.v
E4/: Makefile  minirv.c  minirvEMU.c  output.txt  output2.txt  sEMU  sEMU.c  temp.py  test.hex  test.txt  test1.c  test2.c  txt2hex  txt2hex.c
E4/logisim-bin/: mem.hex  mem.txt  sum.hex  sum.txt  vga.hex  vga.txt
E4/minirvEMU/: Makefile  gui.c  main.c  memory.c  minirvEMU  output.txt  riscv_sim  riscv_sim.c  riscv_sim.h  utils.c
E5/test0/: make.tcl  top_sim.cpp  verilator.tcl
E5/test0/obj_dir/: MyDesign  MyDesign.cpp  MyDesign.mk  MyDesign__ALL.d  MyDesign__Syms.cpp  MyDesign___024root__DepSet_hbb974289__0.cpp  MyDesign___024root__DepSet_hbb974289__0__Slow.cpp  MyDesign___024root__DepSet_hf2a8af8c__0.cpp  MyDesign___024root__DepSet_hf2a8af8c__0__Slow.cpp  MyDesign___024root__Slow.cpp  MyDesign__ver.d  top_sim.d
PA1/CPP_files/: README.md  test.py  test.txt
PA1/CPP_files/expression/: CMakeLists.txt  expression.cpp  expression.h  expression_main.cpp
PA1/CPP_files/install/: expression.app
PA1/expression_new/src/: expression.cpp  expression.h  main.cpp
learn_c/exc_1/: ex1
learn_c/exc_2/: ex1  ex1.c
npc/: Makefile
npc/E5/test0/: top_sim.cpp
npc/E5/test1/: top_sim.cpp
npc/E5/test2/: nvboard_sim.cpp
npc/E5/test3/: sCpu.v  sCpu_sim.cpp  segment_7.v
npc/sCPU/: Makefile  sCPU_sim.cpp
npc/sCPU/obj_dir/: Vpc_m.cpp  Vpc_m.h  Vpc_m.mk  Vpc_m__Dpi.cpp  Vpc_m__Dpi.h  Vpc_m__Syms.cpp  Vpc_m__Syms.h  Vpc_m___024root.h  Vpc_m_classes.mk  (+5 more)
src_init/: nemu-main.c
src_init/monitor/: monitor.c
(+80 files in other folders)
